fix figure caption overlap on print

--- a/assets/css/media/print.css
+++ b/assets/css/media/print.css
@@ -35,6 +35,10 @@
         height: unset;
     }
 
+    figure {
+        position: relative;
+    }
+
     body > main > #main-footer {
         border: unset;
         margin:var(--vskip);
